some cleaning up of mss

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -94,11 +94,11 @@
     In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur [REF]. This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes [REFS?]. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{}
-    An alternative approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners [REF]. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system [REF]. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{} [REPHRASE]. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
+    An alternative approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners [REF]. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system [REF]. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
 
 
     \paragraph{} % I'm not sur this paragraph will be necessary ... but it will need a little bit more work if I include it.
-    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We specify a multi-tiered model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former [CORRECT LANGUAGE?]. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from an association network on the same data, and suggest potential applications in species management, xxx and yyyy  that make use of the rich information provided by species interaction networks.
+    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We specify a multi-tiered model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from an association network on the same data, and suggest potential applications in species management and conservation that make use of the rich information provided by species interaction networks.
 
     %Interactions between species can affect growth rates and population abundances, for example as a predator eats a prey or two plants compete for resources. Together, interactions between many species influence the dynamics of the whole community in ways which can determine patterns of species richness and abundance. In order to understand how community dynamics behave when many species are involved, ecologists can represent communities as networks \parencite{Pimm1978} where species are nodes and linked by interactions. This approach provides a broad view of how multiple species relate to one another within a community \parencite{Kefi2015}. As a result, ecological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these communities \parencite{Dunne2002}. 
 
@@ -174,14 +174,14 @@
 
     \paragraph{}
     We now illustrate potential uses of this framework by examining ecological questions important to species management and how the interaction matrix derived from our case study data may help us better understand the system in question. 
-    We use three ecological questions to illustrate some of the ways in which our results may be useful to empirical and applied ecologists, in particular those interested in...
+    We use three ecological questions to illustrate some of the ways in which our results may be useful to empirical and applied ecologists.
  
     \subsubsection*{Do abundant natives under-regulate their population density compared to rarer natives?}
     One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly. Hypothetically, this relieving of intraspecific competition pressure allows them to reach much higher abundances than species which strongly compete with themselves. In Figure \ref{fig:species} A., we plot the strength of per-capita intraspecific interactions against the log abundance of a species in the field. Intraspecific interactions are at their weakest when close to $0$, values above indicate competition and values below indicate self-facilitation. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength (vertical dashed line). This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high abundances through an under-regulation of their population density but by through other means (e.g. access to a larger environmental niche space). 
 
 
     \subsubsection*{Which species may be taking on keystone roles in the system?}
-    Keystone species are often not particularly abundant but have strong effects on the dynamics of the whole ecosystem, for example top predators in food chains. The keystone species concept is useful in helping determine species of particular importance for the safeguarding of a whole system. The removal or extinction of a keystone species is though to ... Though determining which species truly serve keystone roles is a lengthy and involved process, we can identify potential candidates by plotting a species' out strength against it's log abundance. Out-strength refers to the net sum of per-capita interaction strenths on other species. A high positive out-strength indicates that this species has overall strong competitive effects on the population dynamics of other species in the system, whereas a negative out-strength indicates it;s overall effect is facilitative. Species with an out-strength close to 0 either have very weak interaction effects on other species in the systems, or have evenly matched competitive and facilitative effects which cancel each other out (though the latter was not found in our system). Figure \ref{fig:species} B. highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
+    Keystone species are often not particularly abundant but have strong effects on the dynamics of the whole ecosystem, for example top predators in food chains. The removal or extinction of a keystone species can thus strongly alter the abundances and distributions of other species in the community. The keystone species concept is useful in helping determine species of particular importance for the safeguarding of a whole system. Though determining which species truly serve keystone roles is a lengthy and involved process, we can identify potential candidates by plotting a species' out strength against it's log abundance. Out-strength refers to the net sum of per-capita interaction strenths on other species. A high positive out-strength indicates that this species has overall strong competitive effects on the population dynamics of other species in the system, whereas a negative out-strength indicates it's overall effect is facilitative. Species with an out-strength close to 0 either have very weak interaction effects on other species in the systems, or have evenly matched competitive and facilitative effects which cancel each other out (though the latter was not found in our system). Figure \ref{fig:species} B. highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
 
 
     \subsubsection*{Though exotic species are typically thought to compete with natives, there are also reports of facilitative exotics. Is this the case in our system?}
@@ -222,15 +222,19 @@
     %     \label{fig:aii_abund}
     % \end{figure} 
 
-
     \begin{figure}[H]
         \begin{centering}
         \includegraphics[width=0.4\textwidth]{../2.analyses/figures_mss/species_effects.png}
-        \caption{[UPDATE CAPTION] Focal species net effects on neighbours, according to their abundance (A). On the x axis, values over 0 indicate a net competitive effect whereas values below 0 indicate a net facilitative effect on neighbouring species. Dashed lines represent the median value for focals. Diamonds are species means across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. Yellow, blue and red diamonds signify potential keystone or foundation species, and exotic species respectively. (B) Focal species effects on neighbours, split into competitive vs. facilitative. Axes refer to the absolute sum of competitive vs. facilitative interactions. As for (A), diamonds are species means across all network samples and grey dots indicate the full range of  values as calculated from 1000 sampled networks.(1) \textit{P. airoides}, (2) \textit{A. calendula}.}
+        \caption{(Caption next page.)}
         \label{fig:species}
         \end{centering}
     \end{figure} 
 
+    \addtocounter{figure}{-1}
+	\begin{figure} [t!]
+  		\caption{(Previous page.) Understanding interaction effects can help identify species of particular ecological importance to a system. For all graphs, diamonds are species means across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. Dashed lines represent the median value for focals. Coloured triangles indicate the species refered to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
+        In (A), the x-axis shows the strength of intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' log abundance (y-axis). Values over $0$ indicate competition, and values below show facilitation.  The two most abundant natives, in purple, do not seem to compete with themselves any more or less strongly than the median for all species in the system (dashed line). (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against its' log abundance (x-axis). On the x-axis, values over $0$ indicate that a focal species has an overall competitive effect on neighbours, and values below $0$ indicate that is has an overall facilitative effect. Green diamonds identify species with low abundance but strong competitive or facilitative effects on neighbours. (C) decomposes a focal species' net interaction effects into its' competitive effects (x-axis) and facilitative effects. Red diamonds show exotic species.}%missing
+	\end{figure}
 
  %    Identifying keystone species. .. GITE and HAOD rel. abund < 0.01, two highest sumaji. Maybe GOBE  too? 
  %    Invasives...
@@ -300,7 +304,7 @@
         %Likewise, networks also provide several ways of measuring and describing species roles in their respective communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for single-trophic and bipartite networks. 
 
      \paragraph{} [Moved over from Chapter 4]
- Another approach to understanding diversity-maintenance comes from network theory, which represents an ecological community as a network of nodes or species with their interactions forming the links. This framework can include many species as well as multiple interaction types, and can be summarised by a suite of properties which describe how these species and interactions are organised. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. That said, this framework predominantly focuses on trophic webs (food web) and plant-pollinator or parasite-host systems (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}), with fewer methods developed for analysing the properties of horizontal communities like those of annual plant communities. Using network theory to understanding diversity-maintenance in these plant systems nonetheless presents a challenging but exciting opportunity to  integrate multi-trophic and horizontal approaches to understanding multispecies coexistence // the reality of species interactions and their dynamic effects on biodiversity and stability. [modify this paragraph to suit CH 3]
+ Another approach to understanding diversity-maintenance comes from network theory, which represents an ecological community as a network of nodes or species with their interactions forming the links. This framework can include many species as well as multiple interaction types, and can be summarised by a suite of properties which describe how these species and interactions are organised. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. That said, this framework predominantly focuses on trophic webs (food web) and plant-pollinator or parasite-host systems (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}), with fewer methods developed for analysing the properties of horizontal communities like those of annual plant communities. Using network theory to understanding diversity-maintenance in these plant systems nonetheless presents a challenging but exciting opportunity to integrate multi-trophic and horizontal approaches to understanding multispecies coexistence // the reality of species interactions and their dynamic effects on biodiversity and stability. [modify this paragraph to suit CH 3]
 
 
     % \subsection{Future research directions}
@@ -347,7 +351,7 @@
         The intercept $\beta_{i0}$ represents intrinsic fitness, a species' fitness in the absence of interactions with neighbours. $N_{j}$ are the abundances of neighbours recorded for each observation, and the $\beta_{ij}$ represent the species-specific effect of each neighbour $j$ on $i$. Note that neighbours can include conspecifics, in which case intraspecific interactions are denoted as $\beta_{ii}$.
 
         \paragraph{}
-        [DISCUSS GLM AND LINK FUNCTION HERE]. Bring up that this is run as a glm, so you have to choose an appropriate distribution and link function - the relationship between $P_i$ and the righ-hand side of the equation does not need to be linear! In our case, it definitely wasn't.
+        This model, as well as the RIM described below, are implemented as generalised linear models. This means that the relationship between $P_i$ and the right-hand side of the equation does not need to be linear, but can be modified to fit the data in question given an appropriate distribution and link function, for example exponential or negative binomial (as was the case for our case study). 
               
     \subsection{Unrealised links}
     
@@ -386,27 +390,16 @@
 
         where $\beta_{ij}$ can be replaced with $r_i e_j$ when appropriate. Though this scaling step is not strictly necessary, per capita interaction strengths have the benefit of being directly comparable both across species and across environmental contexts where reproductive fitness may vary \parencite{Wootton2005}, leading to a wider range of potential applications.
 
-    \subsection{Integrating species-level differences in demographic rates / Integrating interaction strengths into models of population dynamics}
-
-    \textbf{this section and the justification below still needs some work}
+    \subsection{Integrating interaction strengths into models of population dynamics}
 
         \paragraph{}
-        In certain instances, models of population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal individuals $F_i$ may not always directly translate into estimates of lifetime reproductive success due to inherent practical constraints with collecting empirical data. For example, certain life-history reproductive strategies may lead to measures of high seed production in the field which do not account for low seed or seedling survival rates post-observation. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. In this scenario, a population dynamic model can be used to translate interation effects on the measured variable into interaction strengths affecting the variable of interest. [THIS MIGHT ALMOST BE BETTER IN THE DISCUSSION?]
+        In certain instances, models of population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal individuals $P_i$ may not always directly translate into estimates of lifetime reproductive success due to inherent practical constraints with collecting empirical data. For example, certain life-history reproductive strategies may lead to measures of high seed production in the field which do not account for low seed or seedling survival rates post-observation. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. In this scenario, a population dynamic model can be used to translate interation effects on the measured variable into interaction strengths affecting the variable of interest. 
 
         \paragraph{}
-        In both cases, an established population dynamic model is required as well as knowledge of any crucial demographic rates ..
-        ... This step is illustrated in our case study below, where an annual plant population dynamic model is used to transform effects on wildfower seed production (the measured proxy for lifetime reproductive success) into effects on ...., and include species-specific estimates of seed germination and surival rates. 
+        In both cases, an established population dynamic model is required as well as knowledge of any crucial demographic rates. This step is illustrated in our case study below, where an annual plant population dynamic model is used to transform effects on wildfower seed production (the measured proxy for lifetime reproductive success) into effects on population growth, and include species-specific estimates of seed germination and survival rates. 
 
-    
-
-        \paragraph{}
-        Though this rescaling is not necessary when interactions are quantified as effects on rates such as growth or biomass accumulation, it is particularly useful in cases where $F_i$ is captured by variables which are affected by r/K reproductive strategies, such as seed or fruit production. Species $i$ for example may produce a high number of seeds of which few are viable, whereas species $j$ produces very few seeds though these are much more likely to mature into reproductive adults. Scaling the interaction terms returned by the models allows us to compare how species $i$ and $j$ both respond to interactions, relative to 
-
-        Depending on the nature of the proxy chosen, this between-species variation in $F_i$ may not capture true differences in the fitness of each species, but rather differences in reproductive strategies for example due to r/K tradeoffs. 
-
-        In these cases, differences in $F_i$ between species (and thus in the magnitude of the interaction terms) may be driven by differences in the amount of fruit or seed produced which do not account for...  [ALSO MOVE TO DISCUSSION?] 
-
-
+        % \paragraph{}
+        % Though this rescaling is not necessary when interactions are quantified as effects on rates such as growth or biomass accumulation, it is particularly useful in cases where $P_i$ is captured by variables which are affected by r/K reproductive strategies, such as seed or fruit production. Species $i$ for example may produce a high number of seeds of which few are viable, whereas species $j$ produces very few seeds though these are much more likely to mature into reproductive adults. Scaling the interaction terms returned by the models allows us to compare how species $i$ and $j$ both respond to interactions, relative to their performance. [MOVE TO DISCUSSIO?]
 
 
     \subsection{Model fitting}
@@ -531,7 +524,7 @@
 
     The following code specifies the joint model framework used to estimate the interaction matrix described in the Methods. It can be copied into a text editor and saved with a .stan extension for use with STAN. 
 
-    %\includepdf[pages=-]{../1.model/model_stan.pdf}
+    \includepdf[pages=-]{../../2018_Compnet/stormland/model_stan.pdf}
 
 
 % \section{Supplementary Results}
@@ -544,12 +537,12 @@
         \label{fig:adist}
     \end{figure}
 
-        \begin{figure}[H]
-       % \hspace*{-3.5cm}
-        \includegraphics[width=\textwidth]{../../2020_Thesis/reviewer_comments/figures_for_oral_exam/correlation_re.png}
-        \caption{POTENTIAL FIGURE - Correlation between species estimates of response and impact parameters. Black triangles are species means across all samples. Note that response parameter values are constrained to be positive - this serves to prevent ... WORDING.}
-        \label{fig:corrRE}
-    \end{figure} 
+    %     \begin{figure}[H]
+    %    % \hspace*{-3.5cm}
+    %     \includegraphics[width=\textwidth]{../../2020_Thesis/reviewer_comments/figures_for_oral_exam/correlation_re.png}
+    %     \caption{POTENTIAL FIGURE - Correlation between species estimates of response and impact parameters. Black triangles are species means across all samples. Note that response parameter values are constrained to be positive - this serves to prevent ... WORDING.}
+    %     \label{fig:corrRE}
+    % \end{figure} 
 
 
 \end{document}
